--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,166 @@ font-family: 'Dancing Script', cursive;
 font-family: 'Playfair Display', serif;
 font-family: 'Raleway', sans-serif; 
 */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.padding-lr {
+    /* max-width: 1600px; */
+    padding: 0 1.5rem;
+    /* margin: 0 auto; */
+}
+
+.text {
+    font-family: 'Raleway', sans-serif;
+    font-size: .9rem;
+    line-height: 145%;
+}
+
+/* --------------------------- */
+/* --- HEADER ---*/
+/* --------------------------- */
+
+.header {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../img/header-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-clip: content-box;
+    filter: saturate(.3);
+    color: white;
+    text-align: center;
+    padding: 1.5rem;
+}
+
+.header__logo {
+    font-family: 'Dancing Script', cursive;
+    font-size: 1.3rem;
+    margin-bottom: 4vh;
+}
+
+.logo__sign {
+    display: block;
+    font-size: 1.3em;
+}
+
+.header__heading {
+    font-family: 'Playfair Display', serif;
+    position: relative;
+    font-size: 1.9rem;
+    padding: 0 10%;
+}
+
+.header__heading::after {
+    display: block;
+    content: "";
+    width: 20%;
+    height: 3px;
+    transform: translateX(200%);
+    background-color: white;
+    margin: 3vh 0;
+}
+
+.header__text {
+    padding: 0 5% 50px;
+}
+
+.arrow-down {
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 12%;
+    transform: translate(-50%, 0);
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 10px;
+    animation: arrow-toggle 2s ease-out infinite;
+}
+
+@keyframes arrow-toggle {
+    50% {
+        transform: translate(-50%, 7px);
+    }
+}
+
+@media (min-width: 500px) and (orientation:landscape) {
+    .header__heading {
+        font-size: 1.6rem;
+    }
+
+    .header__text {
+        font-size: .8rem;
+        width: 80%;
+    }
+}
+
+@media (min-width: 730px) {
+    .header__text {
+        font-size: .9rem;
+        width: 80%;
+    }
+
+    .arrow-down {
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 730px) and (orientation: portrait) {
+
+    .header__logo {
+        font-size: 1.7rem;
+    }
+
+    .header__heading {
+        font-size: 2.4rem;
+    }
+
+    .header__text {
+        font-size: 1.1rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .header__heading {
+        font-size: 2.5rem;
+    }
+
+    .header__text {
+        width: 60%;
+        font-size: .9rem;
+    }
+}
+
+@media (min-width: 1400px) {
+    .header__text {
+        width: 45%;
+    }
+}
+
+/* --------------------------- */
+/* --- NAVIGATION ---*/
+/* --------------------------- */
+
+.nav {
+    padding: 0 1.5rem;
+}
+
+.nav__logo {}
+
+.nav__list {
+    list-style: none;
+}
+
+.nav__item {}
+
+.nav__link {}
