--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,15 @@ font-family: 'Raleway', sans-serif;
     box-sizing: border-box;
 }
 
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+body {
+    min-height: 3000px;
+}
+
 .padding-lr {
     /* max-width: 1600px; */
     padding: 0 1.5rem;
@@ -33,7 +42,7 @@ font-family: 'Raleway', sans-serif;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../img/header-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url(../img/header-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -41,12 +50,15 @@ font-family: 'Raleway', sans-serif;
     filter: saturate(.3);
     color: white;
     text-align: center;
+    cursor: default;
     padding: 1.5rem;
 }
 
 .header__logo {
     font-family: 'Dancing Script', cursive;
     font-size: 1.3rem;
+    font-style: italic;
+    letter-spacing: .5px;
     margin-bottom: 4vh;
 }
 
@@ -60,6 +72,7 @@ font-family: 'Raleway', sans-serif;
     position: relative;
     font-size: 1.9rem;
     padding: 0 10%;
+    font-weight: 400;
 }
 
 .header__heading::after {
@@ -69,14 +82,15 @@ font-family: 'Raleway', sans-serif;
     height: 3px;
     transform: translateX(200%);
     background-color: white;
-    margin: 3vh 0;
+    margin: 2.5vh 0 3.8vh;
 }
 
 .header__text {
     padding: 0 5% 50px;
 }
 
-.arrow-down {
+.arrow-down,
+.arrow-down:hover {
     display: block;
     position: absolute;
     left: 50%;
@@ -85,7 +99,7 @@ font-family: 'Raleway', sans-serif;
     color: white;
     text-decoration: none;
     cursor: pointer;
-    padding: 10px;
+    padding: 5px;
     animation: arrow-toggle 2s ease-out infinite;
 }
 
@@ -134,7 +148,12 @@ font-family: 'Raleway', sans-serif;
 
 @media (min-width: 1024px) {
     .header__heading {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
+    }
+
+    .header__logo {
+        font-size: 1.6rem;
+        margin-bottom: 5vh;
     }
 
     .header__text {
@@ -154,15 +173,92 @@ font-family: 'Raleway', sans-serif;
 /* --------------------------- */
 
 .nav {
-    padding: 0 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: absolute;
+    width: calc(100% - 3rem);
+    top: 100vh;
+    left: 0;
+    margin: 0 1.5rem;
+    padding: 10px;
+    border-bottom: 1px solid gray;
+    z-index: 1;
 }
 
-.nav__logo {}
+.nav__logo {
+    align-self: center;
+    font-family: 'Dancing Script', cursive;
+    font-style: italic;
+    letter-spacing: .5px;
+    font-size: 1.5rem;
+    color: #696969;
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+.nav__logo:hover {
+    color: black;
+}
+
+.nav__icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: 1px solid #696969;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 15px;
+}
+
+.nav__icon-bar {
+    width: 28px;
+    height: 3px;
+    background-color: #696969;
+    transition: .3s;
+    opacity: 1;
+}
+
+.nav__icon-bar:first-child.close {
+    transform: translateY(8.8px) rotate(225deg);
+    background-color: #d07c7c;
+}
+
+.nav__icon-bar:nth-child(2).close {
+    transform: rotate(225deg);
+    background-color: #d07c7c;
+}
+
+.nav__icon-bar:last-child.close {
+    transform: translateY(-8.8px) rotate(-225deg);
+    background-color: #d07c7c;
+}
 
 .nav__list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     list-style: none;
+    margin-bottom: 0;
 }
 
-.nav__item {}
+.nav__item {
+    align-self: center;
+    width: 100%;
+    text-align: center;
+    padding: 7px 0;
+}
 
-.nav__link {}
+.nav__link {
+    display: block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #696969;
+}
